Use the new GitHub Pages domain name

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
 
-    <meta http-equiv="refresh" content="0; url=http://htty.github.com/htty" />
+    <meta http-equiv="refresh" content="0; url=http://htty.github.io/htty" />
 
     <title>htty, the HTTP TTY</title>
   </head>
 
   <body>
-    <p>Go to <a href="htty">http://htty.github.com/htty</a>.</p>
+    <p>Go to <a href="htty">http://htty.github.io/htty</a>.</p>
   </body>
 </html>
